# nesting

./: Pipfile  pyproject.toml  run.py
nesting/: __main__.py
nesting/api/: api.py  n_api.py
nesting/gui/: figures.py  gui.py
nesting/logger/: logger.py
nesting/nfp_interface/: CMakeLists.txt
nesting/optimiser/: localsearch.py  smallestenclosingcircle.py  spaceoptimiser.py  structs.py
nesting/parser/: arcinterpolator.py  gcodeparser.py
